--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8082
+#server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/vet?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=sarah
 spring.datasource.password=sarah123
