--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web-services</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -47,7 +43,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
+    <packaging>jar</packaging>
     <build>
         <plugins>
             <plugin>
