--- a/jenkinsfile
+++ b/jenkinsfile
@@ -46,20 +46,7 @@ pipeline{
         stage('nexus'){
             steps{
                 script{
-                    nexusArtifactUploader artifacts:
-                    [
-                        [artifactId: 'demo',
-                         classifier: '',
-                         file: 'target\\VetApp.jar',
-                          type: 'jar']
-                    ],
-                    credentialsId: 'nexus-auth',
-                    groupId: 'com.example',
-                    nexusUrl: 'localhost:8081/',
-                    nexusVersion: 'nexus3',
-                    protocol: 'http',
-                    repository: 'vetapp-release',
-                    version: '0.0.1-SNAPSHOT'
+                nexusArtifactUploader credentialsId: 'nexus-auth', groupId: 'com.example', nexusUrl: 'localhost:8081', nexusVersion: 'nexus3', protocol: 'http', repository: 'vetapp-release', version: '0.0.1-SNAPSHOT'
                 }
             }
         }
